--- a/llt.bib
+++ b/llt.bib
@@ -176,6 +176,28 @@
 }
 
 
+@article{shannon1948mathematical,
+  title={A mathematical theory of communication},
+  author={Shannon, Claude Elwood},
+  journal={Bell system technical journal},
+  volume={27},
+  number={3},
+  pages={379--423},
+  year={1948},
+  publisher={Wiley Online Library}
+}
+
+
+@inproceedings{khan2013discriminative,
+  title={Discriminative color descriptors},
+  author={Khan, Rahat and Van de Weijer, Joost and Shahbaz Khan, Fahad and Muselet, Damien and Ducottet, Christophe and Barat, Cecile},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={2866--2873},
+  year={2013}
+}
+
+
+
 % ----- LIT REVIEW END -----
 
 @techreport{barrow1977parametric,
