--- a/llt.bib
+++ b/llt.bib
@@ -104,6 +104,16 @@
   year={2016}
 }
 
+@inproceedings{liu2016large,
+  title={Large-scale vehicle re-identification in urban surveillance videos},
+  author={Liu, Xinchen and Liu, Wu and Ma, Huadong and Fu, Huiyuan},
+  booktitle={2016 IEEE International Conference on Multimedia and Expo (ICME)},
+  pages={1--6},
+  year={2016},
+  organization={IEEE}
+}
+
+
 @inproceedings{shen2017learning,
   title={Learning deep neural networks for vehicle re-id with visual-spatio-temporal path proposals},
   author={Shen, Yantao and Xiao, Tong and Li, Hongsheng and Yi, Shuai and Wang, Xiaogang},
@@ -194,6 +204,201 @@
   booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
   pages={2866--2873},
   year={2013}
+}
+
+
+@inproceedings{lessard2016countingapp,
+  title={The countingapp, or how to count vehicles in 500 hours of video},
+  author={Lessard, Adrien and Belisle, Francois and Bilodeau, Guillaume-Alexandre and Saunier, Nicolas},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition Workshops},
+  pages={16--24},
+  year={2016}
+}
+
+
+@article{lai2015video,
+  title={Video object retrieval by trajectory and appearance},
+  author={Lai, Yuan-Hao and Yang, Chuan-Kai},
+  journal={IEEE Transactions on Circuits and Systems for Video Technology},
+  volume={25},
+  number={6},
+  pages={1026--1037},
+  year={2015},
+  publisher={IEEE}
+}
+
+@inproceedings{momin2015vehicle,
+  title={Vehicle detection and attribute based search of vehicles in video surveillance system},
+  author={Momin, Bashirahamad F and Mujawar, Tabssum M},
+  booktitle={2015 International Conference on Circuits, Power and Computing Technologies [ICCPCT-2015]},
+  pages={1--4},
+  year={2015},
+  organization={IEEE}
+}
+
+
+@inproceedings{yang2015semantic,
+  title={Semantic Description and Information Retrieval Research of Surveillance Video in Smart Transportation System},
+  author={Yang, Boxiong and Huang, Jing and Yang, Yuqi},
+  booktitle={2015 International Conference on Electromechanical Control Technology and Transportation},
+  year={2015},
+  organization={Atlantis Press}
+}
+
+@inproceedings{wang2016research,
+  title={Research of vehicle speed detection algorithm in video surveillance},
+  author={Wang, Jin-xiang},
+  booktitle={2016 International Conference on Audio, Language and Image Processing (ICALIP)},
+  pages={349--352},
+  year={2016},
+  organization={IEEE}
+}
+
+@article{luvizon2017video,
+  title={A video-based system for vehicle speed measurement in urban roadways},
+  author={Luvizon, Diogo Carbonera and Nassu, Bogdan Tomoyuki and Minetto, Rodrigo},
+  journal={IEEE Transactions on Intelligent Transportation Systems},
+  volume={18},
+  number={6},
+  pages={1393--1404},
+  year={2017},
+  publisher={IEEE}
+}
+
+@article{apeltauer2015automatic,
+  title={Automatic vehicle trajectory extraction for traffic analysis from aerial video data},
+  author={Apeltauer, Ji{\v{r}}{\'l} and Babinec, Adam and Herman, David and Apeltauer, Tom{\'a}{\v{s}}},
+  journal={The International Archives of Photogrammetry, Remote Sensing and Spatial Information Sciences},
+  volume={40},
+  number={3},
+  pages={9},
+  year={2015},
+  publisher={Copernicus GmbH}
+}
+
+@article{yang2017real,
+  title={Real-time vehicle detection and counting in complex traffic scenes using background subtraction model with low-rank decomposition},
+  author={Yang, Honghong and Qu, Shiru},
+  journal={IET Intelligent Transport Systems},
+  volume={12},
+  number={1},
+  pages={75--85},
+  year={2017},
+  publisher={IET}
+}
+
+@techreport{yu2017improved,
+  title={Improved Real Time Lane Detection Using Advanced Lane Extraction Method},
+  author={Yu, Guizhen and Wang, Zhangyu and Wu, Xinkai and Ma, Yalong},
+  year={2017}
+}
+
+@article{cao2016vehicle,
+  title={Vehicle detection from highway satellite images via transfer learning},
+  author={Cao, Liujuan and Wang, Cheng and Li, Jonathan},
+  journal={Information sciences},
+  volume={366},
+  pages={177--187},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@inproceedings{arya2016real,
+  title={Real-time vehicle detection and tracking},
+  author={Arya, KV and Tiwari, Shailendra and Behwalc, Saurabh},
+  booktitle={2016 13th International Conference on Electrical Engineering/Electronics, Computer, Telecommunications and Information Technology (ECTI-CON)},
+  pages={1--6},
+  year={2016},
+  organization={IEEE}
+}
+
+@inproceedings{liu2016highway,
+  title={Highway vehicle counting in compressed domain},
+  author={Liu, Xu and Wang, Zilei and Feng, Jiashi and Xi, Hongsheng},
+  booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={3016--3024},
+  year={2016}
+}
+
+@article{al2016adaptive,
+  title={An adaptive approach for real-time road traffic congestion detection using adaptive background extraction.},
+  author={Al-Najdawi, Nijad and Abu-Roman, Asma and Tedmori, Sara and Al-Najdawi, M Noor},
+  journal={Int. Arab J. Inf. Technol.},
+  volume={13},
+  number={6B},
+  pages={1075--1083},
+  year={2016}
+}
+
+@article{meng2017traffic,
+  title={Traffic Conflict Identification Technology of Vehicle Intersection Based on Vehicle Video Trajectory Extraction},
+  author={Meng, LI and Han, WANG Xiao and Ke, SHI},
+  journal={Procedia Computer Science},
+  volume={109},
+  pages={963--968},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@inproceedings{choong2017modeling,
+  title={Modeling of vehicle trajectory clustering based on LCSS for traffic pattern extraction},
+  author={Choong, Mei Yeen and Angeline, Lorita and Chin, Renee Ka Yin and Yeo, Kiam Beng and Teo, Kenneth Tze Kin},
+  booktitle={2017 IEEE 2nd International Conference on Automatic Control and Intelligent Systems (I2CACIS)},
+  pages={74--79},
+  year={2017},
+  organization={IEEE}
+}
+
+
+@inproceedings{ren2018learning,
+  title={Learning Traffic Behaviors by Extracting Vehicle Trajectories from Online Video Streams},
+  author={Ren, Xinhe and Wang, David and Laskey, Michael and Goldberg, Ken},
+  booktitle={2018 IEEE 14th International Conference on Automation Science and Engineering (CASE)},
+  pages={1276--1283},
+  year={2018},
+  organization={IEEE}
+}
+
+
+@inproceedings{shi2017study,
+  title={Study on parking spaces analyzing and guiding system based on video},
+  author={Shi, Chengzhi and Liu, Jihong and Miao, Chenchen},
+  booktitle={2017 23rd International Conference on Automation and Computing (ICAC)},
+  pages={1--5},
+  year={2017},
+  organization={IEEE}
+}
+
+
+@article{marmol2016quickspot,
+  title={QuickSpot: a video analytics solution for on-street vacant parking spot detection},
+  author={M{\`a}rmol, Elena and Sevillano, Xavier},
+  journal={Multimedia Tools and Applications},
+  volume={75},
+  number={24},
+  pages={17711--17743},
+  year={2016},
+  publisher={Springer}
+}
+
+@inproceedings{ling2017identifying,
+  title={Identifying parking spaces \& detecting occupancy using vision-based IoT devices},
+  author={Ling, Xiao and Sheng, Jie and Baiocchi, Orlando and Liu, Xing and Tolentino, Matthew E},
+  booktitle={2017 Global Internet of Things Summit (GIoTS)},
+  pages={1--6},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{zhang2017car,
+  title={A car-face region-based image retrieval method with attention of SIFT features},
+  author={Zhang, Changyou and Wang, Xiaoya and Feng, Jun and Cheng, Yu and Guo, Cheng},
+  journal={Multimedia Tools and Applications},
+  volume={76},
+  number={8},
+  pages={10939--10958},
+  year={2017},
+  publisher={Springer}
 }
 
 
@@ -370,16 +575,6 @@ url={https://cnx.org/contents/FPtK1zmh@6.27:s3XqfSLV@4/Sensory-Perception}}
   publisher={Elsevier}
 }
 
-@article{marmol2016quickspot,
-  title={QuickSpot: a video analytics solution for on-street vacant parking spot detection},
-  author={M{\`a}rmol, Elena and Sevillano, Xavier},
-  journal={Multimedia Tools and Applications},
-  volume={75},
-  number={24},
-  pages={17711--17743},
-  year={2016},
-  publisher={Springer}
-}
 
 @article{parekh2014survey,
   title={A survey on object detection and tracking methods},
